# glsl-optimizer

./: .gitignore  CMakeLists.txt  conanfile.py
src/glsl/glcpp/: glcpp-lex.c
